# plan-flow

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py  deps.py  security.py  types.py
backend/app/domains/ai/: checkpointer.py  content_extraction.py  lang_utils.py  llm.py  memory.py  memory_repository.py  memory_router.py  memory_service.py  memory_toggle.py  models.py  pending_actions.py  pipeline.py  research.py  router.py  schemas.py  service.py
backend/app/domains/auth/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/boards/: artifact_repository.py  artifact_service.py  board_repository.py  board_service.py  dag_utils.py  member_repository.py  models.py  ownership.py  position_utils.py  router.py  schemas.py  service.py  share_repository.py  subtask_repository.py  subtask_service.py  task_repository.py  task_service.py
backend/app/domains/goals/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/settings/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/templates/: models.py  repository.py  router.py  schemas.py  service.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 083ac4d21c2f_add_memory_management.py  504dd325f88f_add_user_table.py  a1b2c3d4e5f6_add_board_share_and_board_member_tables.py  a1b2c3d4e5f6_add_board_tables.py  a1f2b3c4d5e6_add_subtask_action_fields.py  b2c3d4e5f6a7_fractional_positions_and_subtasks.py  b2f3c4d5e6f7_add_board_parent_task_id.py  c3d4e5f6a7b8_replace_kanban_with_dag.py  c7a1b2d3e4f5_add_board_templates.py  d4e5f6a7b8c9_add_board_share_and_board_member_tables.py  d53b12eb08f5_add_goal_table.py  e4f5a6b7c8d9_add_memory_table.py  e5f6a7b8c9d0_add_simple_mode_setting.py  eb35d52da786_add_artifact_table.py  f5a6b7c8d9e0_add_pending_action_table.py
backend/tests/: conftest.py  test_health.py  test_security.py
backend/tests/domains/ai/: test_content_extraction.py  test_memory_api.py  test_meta.py  test_sub_board_prompts.py
backend/tests/domains/auth/: test_login.py  test_logout.py  test_me.py  test_refresh.py  test_register.py
backend/tests/domains/boards/: test_board_list.py  test_column_crud.py  test_dag_utils.py  test_fractional_indexing.py  test_generate_board.py  test_get_board.py  test_ownership.py  test_schemas.py  test_shared_access.py  test_subtask_crud.py  test_task_crud.py
backend/tests/domains/goals/: test_answers.py  test_create_goal.py  test_get_goal.py  (+1 more)
(+445 files in other folders)
